# AutoEdging

./: BOM.xlsx
AutoEdging/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
AutoEdging/components/act_pwm_ledc/: CMakeLists.txt
AutoEdging/components/app/: CMakeLists.txt  Kconfig.projbuild  app.c
AutoEdging/components/ble_belt/: ble_belt.c
AutoEdging/components/bus_i2c/: CMakeLists.txt  bus_i2c.c
AutoEdging/components/control_api/: control_api.c
AutoEdging/components/dev_mcp_h11/: CMakeLists.txt  dev_mcp_h11.c
AutoEdging/components/game_engine/: CMakeLists.txt  game_engine.c
AutoEdging/components/web_server/: CMakeLists.txt  web_server.c
AutoEdging/main/: CMakeLists.txt  idf_component.yml
AutoEdging/spiffs/: app.css  app.js  index.html
ble-test/: CMakeLists.txt
ble-test/main/: CMakeLists.txt  ble-test.c
firmware/: sdkconfig.defaults
firmware/components/act_pwm_ledc/: act_pwm_ledc.c
firmware/components/app/: CMakeLists.txt  Kconfig.projbuild  app.c
firmware/components/ble_belt/: ble_belt.c
firmware/components/control_api/: CMakeLists.txt  control_api.c
firmware/components/dev_dac7571/: CMakeLists.txt  dev_dac7571.c
firmware/components/dglab_socket/: dglab_socket.c  dglab_waveforms.h
firmware/components/game_engine/: CMakeLists.txt  game_engine.c
firmware/components/nipple_dome/: CMakeLists.txt  nipple_dome.c
firmware/components/telemetry/: telemetry.c
firmware/main/: CMakeLists.txt
firmware/spiffs/: app.css  app.js  index.html
firmware/tools/: minify_spiffs.py
test/main/: CMakeLists.txt  test.c
(+21 files in other folders)
